# rules_rust_proto

./: .gitignore  Cargo.toml  README.md  WORKSPACE  defs.bzl
examples/echo/: BUILD.bazel  Cargo.toml  echo.messages.proto  echo.proto
examples/echo/src/: main.rs
examples/multi_package/: BUILD.bazel  Cargo.toml  service.proto
examples/multi_package/src/: main.rs
tonic/: BUILD.bazel  Cargo.toml  README.md  toolchain.bzl
tonic/src/: cli.rs  generator.rs  lib.rs  main.rs  utils.rs
toolchain/: toolchain.bzl
