load("//toolchain:toolchain.bzl", "rust_proto_toolchain")
load("@crate_index//:defs.bzl", "aliases", "all_crate_deps", "crate_deps")
load("@rules_rust//rust:defs.bzl", "rust_binary", "rust_library")

package(default_visibility = ["//visibility:public"])

rust_proto_toolchain(
    name = "tonic_proto_toolchain",
    proto_transpiler = ":tonic_proto_transpiler_bin",
    runtime_deps = crate_deps([
        "prost",
        "tonic",
    ]),
)

toolchain(
    name = "proto_toolchain",
    toolchain = ":tonic_proto_toolchain",
    toolchain_type = "//toolchain:toolchain_type",
)

rust_library(
    name = "tonic_proto_transpiler",
    srcs = glob(
        include = ["src/*.rs"],
        exclude = ["src/main.rs"],
    ),
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ),
)

rust_binary(
    name = "tonic_proto_transpiler_bin",
    srcs = [
        "src/main.rs",
    ],
    aliases = aliases(),
    proc_macro_deps = all_crate_deps(
        proc_macro = True,
    ),
    deps = all_crate_deps(
        normal = True,
    ) + [
        ":tonic_proto_transpiler",
    ],
)
