[package]
edition = "2021"
name = "echo"
version = "0.1.0"

[[bin]]
name = "echo_bin"
path = "src/main.rs"

[dependencies]
async-trait = "0"
futures = "0"
prost = "0"
tokio = {version = "1", features = ["rt-multi-thread"]}
tonic = "0"
# Uncomment this line after bazel building everything to make vscode syntax highlighting work.
# echo_proto = {path = "../../bazel-out/darwin-fastbuild/bin/examples/echo/echo_proto.cargo"}
